--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .block-center {
   display: block;
   margin-left: auto;
@@ -7,7 +8,11 @@
   text-align: center; }
 
 .profile {
-  height: 250px; }
+  background-image: url("img_sky.jpg");
+  height: 250px;
+  width: 100%;
+  background-size: cover;
+  background-position: bottom center; }
 
 section {
   padding: 60px 0; }
@@ -16,7 +21,7 @@ section {
     margin-left: auto;
     margin-right: auto; }
   section .h2 {
-    font-size: 3.2rem;
+    font-size: 5.2rem;
     font-family: 'Abel', sans-serif;
     nature-transform: uppercase; }
 
@@ -45,9 +50,21 @@ section {
   margin-bottom: 10px;
   color: #14c0c9; }
 
-#contact .button_wrapper {
+.button {
+  width: 80px;
+  margin: 10px auto;
+  padding: 15px 0;
+  font-size: 20px;
+  text-decoration: none;
+  display: block;
   text-align: center;
-  margin-top: 20px; }
+  color: #FFFFFF;
+  background: #008DDD;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  /* for Safari and Chrome 対応*/
+  -moz-border-radius: 5px;
+  /* for Firefox 対応*/ }
 
 @media (min-width: 769px) {
   #nature .container {
@@ -56,6 +73,10 @@ section {
     justify-content: space-between; }
 
   .profile {
-    height: 500px; } }
+    background-image: url("img_sky.jpg");
+    height: 500px;
+    width: 100%;
+    background-size: cover;
+    background-position: bottom center; } }
 
 /*# sourceMappingURL=style.css.map */
