--- a/css/style.scss
+++ b/css/style.scss
@@ -7,8 +7,12 @@
 .text-center {
     text-align:center;
 }
-.profile{
+.profile {
+    background-image:url("img_sky.jpg");
     height:250px;
+    width:100%;
+    background-size: cover;
+    background-position: bottom center;
 }
 section
 {
@@ -19,7 +23,7 @@ section
     margin-right:auto;
 }
 .h2{
-    font-size: 3.2rem;
+    font-size: 5.2rem;
     font-family: 'Abel', sans-serif;
     nature-transform: uppercase;
 }
@@ -63,9 +67,19 @@ section
     color: #14c0c9;
 }
 
-#contact .button_wrapper{
-   text-align:center;
-   margin-top:20px;
+.button {
+    width: 80px;
+    margin: 10px auto;
+    padding: 15px 0;
+    font-size: 20px;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    color: #FFFFFF;
+    background: #008DDD;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;/* for Safari and Chrome 対応*/
+    -moz-border-radius: 5px;/* for Firefox 対応*/
 }
 
 @media (min-width: 769px){
@@ -77,7 +91,12 @@ section
     justify-content: space-between;
         }
     }
-    .profile{
-        height:500px;
-    }
+    .profile {
+    background-image:url("img_sky.jpg");
+    height:500px;
+    width:100%;
+    background-size: cover;
+    background-position: bottom center;
+}
+    
 }
